--- a/PoSnetwork2.ipynb
+++ b/PoSnetwork2.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "# import\n",
-    "\n",
+    "import datetime\n",
     "import hashlib\n",
     "import json\n",
     "import time\n",
@@ -73,14 +73,14 @@
     "        for target_node in blockchain.nodes:      # 다른 노드들도 선정된 사람 진행\n",
     "            print(target_node)\n",
     "            headers = {'Content-Type' : 'application/json; charset = utf-8'}\n",
-    "            res = requests.get('http://' + target_node  +\"/nodes/pick_winner\", headers=headers)\n",
+    "            res = requests.get('http://' + target_node  + \"/nodes/pick_winner\", headers=headers)\n",
     "            winner_info = json.loads(res.content)  # 근처 노드들 선정 결과 받기 \n",
     "            print(winner_info)\n",
     "            winner_list.append(winner_info['winner'])\n",
     "            \n",
     "        final_winner = max(winner_list, key = winner_list.count) #각 노드의 pos 결과로 가장 많이 선정된 사람을 winner로 선정\n",
     "            \n",
-    "        print(\"final_winner selected : \", final_winner)\n",
+    "        print(\"마지막-우승자는 : \", final_winner)\n",
     "        return final_winner\n",
     "\n",
     "    def pick_winner(self,account_name, account_weight):  ### 누가누가 블록 만들래!! 만들사람 뽑기\n",
@@ -89,35 +89,31 @@
     "             \n",
     "        for w in range(account_weight):  # 나의 노드들의 weight 수만큼 추가\n",
     "            candidate_list.append(account_name)\n",
-    "                \n",
-    "        for target_node in blockchain.nodes:            # 근처 노드들의 weight 수만큼 추가\n",
+    "        \n",
+    "        for target_node in blockchain.nodes:\n",
+    "            # 근처 노드들의 weight 수만큼 추가\n",
     "            print(target_node)\n",
-    "\n",
-    "            headers = {'Content-Type' : 'application/json; charset=utf-8'}\n",
-    "\n",
-    "            res = requests.get('http://' + target_node   + \"/nodes/node_weight\", headers=headers)\n",
-    "            target_node_info = json.loads(res.content)  # 근처 노드들의 weight 정보 받아와서\n",
-    "\n",
-    "        for repeated in range(target_node_info['account_weight']):\n",
-    "            candidate_list.append(target_node_info['account_name'])  # weight값 만큼  candidate_list에 추가\n",
-    "\n",
-    "        random.shuffle(candidate_list)       #  랜덤으로 섞고!\n",
-    "        for x in  candidate_list:           #  첫번째 node를 winner로 선정\n",
-    "            winner  = x\n",
-    "            print(\"WINNER SELECTED : \", winner)\n",
+    "            headers = {'Content-Type' : 'application/json; charset = utf-8'}\n",
+    "            res = requests.get('http://' + target_node  + \"/nodes/pick_winner\", headers=headers)\n",
+    "            target_node_info = json.loads(res.content)  # 근처 노드들의 weight 정보를 받아 와서\n",
+    "            \n",
+    "            for repeated in range(target_node_info['account_weight']):\n",
+    "                candidate_list.append(target_node_info['account_name'])  # weight값 만큼  candidate_list에 추가\n",
+    "            \n",
+    "        random.shuffle(candidate_list)   # 랜덤으로 섞는다\n",
+    "        for x in candidate_list:   # 첫번째 node를 winner로 선정\n",
+    "            winner = x\n",
+    "            print(\"우승자는 : \", winner)\n",
     "            break\n",
+    "        return winner\n",
     "\n",
-    "        return winner                       # winner 공개\n",
-    "    \n",
-    "        \n",
-    "        \n",
     "    def new_transaction(self, sender, recipient, amount, smart_contract):\n",
     "        self.current_transaction.append(\n",
     "            {\n",
     "                'sender' : sender, #송신자\n",
     "                'recipient' : recipient, #수신자\n",
     "                'amount' : amount, #금액\n",
-    "                'timestmap' : time.time(),\n",
+    "                'timestamp' : time.time(),\n",
     "                'smart_contract' : smart_contract\n",
     "            }\n",
     "        )\n",
@@ -167,7 +163,7 @@
     "            if target_node_info['length'] > len(self.chain):    # 다른노드의 블록이 내 노드의 블록보다 길 경우\n",
     "                if self.is_chain_valid(target_node_info):   # 그리고 그 노드가 valid 할경우\n",
     "                    self.blockchain = target_node_info      # 내 노드들 그 노드로 덮어씌우기\n",
-    "            return\n",
+    "                    return\n",
     "        return"
    ]
   },
@@ -180,7 +176,7 @@
     "my_ip = 'localhost'\n",
     "my_port = '5001'\n",
     "node_identifier = 'node_'+my_port\n",
-    "mine_owner = 'validator_2'\n",
+    "mine_owner = 'DuHyeon_USA'\n",
     "mine_profit = 0.1\n",
     "\n",
     "blockchain = Blockchain(account_name=mine_owner, account_weight= 50)"
@@ -207,17 +203,19 @@
     "@app.route('/transactions/new', methods=['POST'])\n",
     "def new_transaction():\n",
     "    values = request.get_json() \n",
-    "    print(\"transactions_new!!! : \", values)\n",
+    "    print(\"새로운 트랜젝션!!! : \", values)\n",
     "    required = ['sender', 'recipient', 'amount'] \n",
     "\n",
     "    if not all(k in values for k in required):\n",
     "        return 'missing values', 400\n",
+    "    # contract_address = hashlib.sha256(str(datetime.datetime.now()).encode()).hexdigest()\n",
+    "    # values['smart_contract'][\"contract_address\"] = contract_address # 스마트 컨트렉트 코드\n",
     "    \n",
     "    if 'smart_contract' not in values:\n",
     "        values['smart_contract'] = 'empty'\n",
     "\n",
     "    index = blockchain.new_transaction(values['sender'],values['recipient'],\n",
-    "values['amount'], values['smart_contract'])\n",
+    "    values['amount'], values['smart_contract'])\n",
     "        \n",
     "    response = {'message' : 'Transaction will be added to Block {%s}' % index}\n",
     "    \n",
@@ -238,7 +236,7 @@
     "@app.route('/block/new', methods=['POST'])\n",
     "def new_block():\n",
     "    block = request.get_json() \n",
-    "    print(\"NEW BLOCK  ADDED!!! : \", block)\n",
+    "    print(\"새로운 블록 추가!!! : \", block)\n",
     "    \n",
     "    blockchain.current_transaction = []\n",
     "    blockchain.chain.append(block) \n",
@@ -249,15 +247,15 @@
     "\n",
     "@app.route('/mine', methods=['GET'])\n",
     "def mine():\n",
-    "    print(\"MINING STARTED\")    \n",
+    "    print(\"채굴 시작\")    \n",
     "    final_winner = blockchain.pos()  \n",
     "    \n",
     "    if final_winner == blockchain.account_name:  # 만약 본 노드가 winner로 선정되었으면 아래와 같이\n",
-    "        print(\"MY NODE IS SELECTED AS MINER NODE\")\n",
+    "        print(\"나의 노드는 채굴 노드로 선택되었다.\")\n",
     "\n",
     "    \n",
     "    else : # isWinner = False : 본 노드가 winner가 아님\n",
-    "        print(\"MY NODE IS NOT SELECTED AS MINER NODE\")\n",
+    "        print(\"나의 노드가 채굴 노드로 선택되지 못했다.\")\n",
     "\n",
     "    blockchain.new_transaction(           #  선정된 노드에게 보상을 주고\n",
     "        sender=\"mining_profit\", \n",
@@ -289,7 +287,7 @@
     "    }\n",
     "\n",
     "\n",
-    "    response = {'message' : 'Mining Complete'}\n",
+    "    response = {'message' : '채굴 완료'}\n",
     "    return jsonify(response), 200\n",
     "\n",
     "\n",
@@ -298,7 +296,7 @@
     "@app.route('/nodes/register', methods=['POST'])\n",
     "def register_nodes():\n",
     "    values = request.get_json() # json 형태로 보내면 노드가 저장이 됨\n",
-    "    print(\"register nodes !!! : \", values)\n",
+    "    print(\"등록된 노드는 !!! : \", values)\n",
     "    registering_node =  values.get('nodes')\n",
     "    if registering_node == None: # 요청된 node 값이 없다면! \n",
     "        return \"Error: Please supply a valid list of nodes\", 400\n",
@@ -306,7 +304,7 @@
     "    ## 요청받은 노드드이 이미 등록된 노드와 중복인지 검사\n",
     "    ## 중복인인 경우\n",
     "    if registering_node.split(\"//\")[1] in blockchain.nodes:\n",
-    "        print(\"Node already registered\")  # 이미 등록된 노드입니다.\n",
+    "        print(\"이미 등록된 노드입니다.\")  # 이미 등록된 노드입니다.\n",
     "        response = {\n",
     "            'message' : 'Already Registered Node',\n",
     "            'total_nodes' : list(blockchain.nodes),\n",
@@ -328,7 +326,7 @@
     "        # 이후 주변 노드들에도 새로운 노드가 등장함을 전파\n",
     "        for add_node in blockchain.nodes:\n",
     "            if add_node != registering_node.split(\"//\")[1]:\n",
-    "                print('add_node : ', add_node)\n",
+    "                print('새로운 노드는 : ', add_node)\n",
     "                ## 노드 등록하기\n",
     "                headers = {'Content-Type' : 'application/json; charset=utf-8'}\n",
     "                data = {\n",
@@ -375,7 +373,7 @@
     "    random.shuffle(candidate_list)       #  랜덤으로 섞고!\n",
     "    for x in  candidate_list:           #  첫번째 node를 winner로 선정\n",
     "        winner  = x\n",
-    "        print(\"WINNER SELECTED : \", winner)\n",
+    "        print(\"우승자는 : \", winner)\n",
     "        break\n",
     "\n",
     "    \n",
